@@ -38,10 +38,6 @@ start() {
 	ebegin $"Activating (possibly) more swap"
 	/sbin/swapon -a
 	eend $?
-
-	# Start dm-crypt mappings, if any
-	start_addon dm-crypt
 }
-
 
 # vim:ts=4
