@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  10 Apr 2006; Mike Frysinger <vapier@gentoo.org>:
+
+    Stop treating dm-crypt as a special additional and just move it into the
+    normal volume related code #128908 by Luud Heck.
+
   09 Apr 2006; Roy Marples <uberlord@gentoo.org>:
 
     RC_COLDPLUG now controls if we add coldplugged services to the boot
